--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+   font-family: 'Outfit', sans-serif;
+   background-color:#fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,h4,p,a,h3{
+  color:#fff;
+  text-decoration: white;
+}
+
+.btn{
+  padding: 12px 32px;
+  margin: 0 5px;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  background-color: yellow;
+  color: black;
+  border:1px solid black;
+  font-weight: 600;
+  cursor: pointer;
+}
+.btn-light{
+  background-color: transparent;
+  color: #000;
+
+}
+.btn:hover{
+  background-color: rgb(247, 242, 242);
+  color: #000;
+  transition:0.3s;
 }
