--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -1,20 +1,48 @@
 #about{ 
     height: 100vh;
-    width: 100%;
-    background-color: rgb(37, 37, 37);
+    /* width: 100%; */
     text-align: center;
+    margin: auto;
+    /* background-color: rgb(26, 24, 24); */
+    width: 80%;
 
 
 }
 
 .about-content{
-    width: 50%;
-    padding: 9rem 0rem;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10rem;
+    width: 100%;
+    padding: 12rem 0rem;
     text-align: left;
     /* margin: auto; */
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 60px;
 }
 #about p:nth-child(2){
     /* margin-left: 49rem; */
+    
+    /* padding: 24rem 0rem; */
     color: cadetblue;
+}
+
+
+#about p:nth-child(2):hover{
+    
+    transform: translateX(20px,0);
+
+}
+
+
+
+
+@media screen and (max-width : 1040px) {
+    .about-content{
+        width: 50%;
+        padding: 3rem 0rem;
+        text-align: left;
+        margin: auto;
+        font-size: 1rem;
+    }
 }
