--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -44,3 +44,24 @@ position: relative;
 .content div{
     padding: 30px;
 }
+
+
+
+@media screen and (max-width : 1040px){
+    .content{
+        /* position: absolute;
+        transform: translate(-50%,-50%);
+        left: 50%;
+         top: 50%;
+        text-align: center; */
+        font-size: 1rem;
+     
+        /* margin: auto; */
+     }
+
+     .content .buttons{
+        display: flex;
+    }
+    
+
+}
