--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -13,6 +13,10 @@
     background-color: rgba(8, 8, 8, 0.85);
     transition: 0.5s;
 }
+.header a:hover{
+    cursor: pointer;
+    color: cadetblue;
+  }
 
 .nav-links{
     display: flex;
@@ -50,6 +54,10 @@
     z-index:1;
     
     
+}
+
+.header{
+    font-size: 0.8rem;
 }
     
 .nav-links li{
