--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -64,6 +64,11 @@
 .card-container{
     display: flex;
     flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    width: 80%;
+    margin: auto;
+    
 }
 
 
