--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -1,14 +1,14 @@
-#project{
-  height: 100vh;
+#projects{
+  /* height: 100vh; */
   width: 80%;
-  /* margin: auto; */
+  margin: auto;
 }
 
 .card-container{
     display: grid;
-    grid-template-columns: repeat(4 ,1fr);
+    grid-template-columns: repeat(3 ,1fr);
     gap: 50px;
-    margin: 20rem 10rem 0 10rem;
+    /* margin: 20rem 10rem 0 10rem; */
 }
 
 .project-card{
@@ -20,8 +20,11 @@
     margin: auto;
     box-shadow: 0.8px 0.5px 2px  cadetblue;
     border-radius: 20px;
+    /* height: 500px; */
+    /* width: 50%; */
 
-    /* width: 50%;  */
+
+    
 }
 .project-card:hover{
   transform: translateY(-10px) ;
@@ -35,15 +38,20 @@
     width: 100%;
 }
 
-#project h1{
+#projects p{
     /* width: 50%; */
+    /* text-transform: uppercase; */
+    text-align: left;
 }
-#project p{
-    /* width: 50%; */
+
+.project-heading{
+    text-transform: uppercase;
 }
+
 .project-about {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     color: grey;
+    text-transform: capitalize;
 }
 
 .project-url{
@@ -56,10 +64,10 @@
     
 }
 
-.project-tech p {
+/* .project-tech p {
     margin-bottom: 20px;
     font-size: 20px;
-}
+} */
 
 .card3{
     margin-bottom: 80px;
@@ -80,6 +88,7 @@
 
 .project-card{
     font-size: 1rem;
+    width: 100%
 }
 
 .project-about {
@@ -95,9 +104,7 @@
     padding: 10px 10px;
 
 }
-.project-tech p{
-   font-size: 1rem;  
-}
+
 
 
 
