--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,23 @@ h1,h4,p,a,h3{
   font-weight: 600;
   cursor: pointer;
 }
+
+.btn2{ 
+  padding: 12px 32px;
+  margin: 0 5px;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  background-color:cadetblue;
+  color: #fff;
+  border:1px solid black;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+
 .btn-light{
   background-color: transparent;
-  color: #000;
+  /* color: #000; */
 
 }
 
